--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_rating: ^0.0.2
   provider: ^4.0.4
   flutter_spinkit: ^4.1.1+1
+  shared_preferences: 
 
 dev_dependencies:
   flutter_test:
