--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_spinkit: ^4.1.1+1
   shared_preferences: 
   flutter_cupertino_settings: ^0.3.0
+  location: ^3.0.2
+  geolocator: ^5.3.1
 
 dev_dependencies:
   flutter_test:
